--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,19 +12,13 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run:
-          name: print hello
-          command: |
-            echo hello
+      - run: echo hello
 
   print_world:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run:
-          name: print world
-          command: |
-            echo world
+      - run: echo world
 
 workflows:
   # Name the workflow "welcome"
@@ -34,4 +28,9 @@ workflows:
       - welcome/run
       - print_hello
       - print_world:
-        requires: [print_hello]
+        requires: 
+          - print_hello
+
+
+
+
