--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo $project_owner
+      - run: echo $MY_ENV_VAR
 
 workflows:
   # Name the workflow "welcome"
