--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# command section
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo ${$CIRCLE_WORKFLOW_ID}
+
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
@@ -32,6 +38,12 @@ jobs:
           at: ~/
       - run: cat ~/output.txt
 
+  print_command:
+    docker: 
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
+
 workflows:
   # Name the workflow "welcome"
   welcome:
@@ -45,6 +57,7 @@ workflows:
       - print_output_file:
           requires:
             - save_hello_world_output
+      - print_pipeline_id
 
 
 
