--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ workflows:
       - print_output_file:
           requires:
             - save_hello_world_output
-      - print_pipeline_id
+      - print_command
 
 
 
