--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 commands:
   print_pipeline_id:
     steps:
-      - run: echo ${$CIRCLE_WORKFLOW_ID}
+      - run: echo ${CIRCLE_WORKFLOW_ID}
 
 # Use a package of configuration called an orb.
 orbs:
