--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,10 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
+      - run: return 1
       - run: 
-          command: return 1
+          name: on error
+          command: echo "ERROR"
           when: on_fail
 
 
