--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,62 +14,12 @@ orbs:
 
 # Orchestrate or schedule a set of jobs
 jobs:
-  print_project_owner:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo $MY_ENV_VAR
 
-  save_hello_world_output:
-    docker: 
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo "text to output here" > ~/output.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - output.txt
-
-  print_output_file:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: cat ~/output.txt
-
-  print_command:
-    docker: 
-      - image: circleci/node:13.8.0
-    steps:
-      - print_pipeline_id
-
-  failure_job:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: return 1
-      - run: 
-          name: on error
-          command: echo "ERROR"
-          when: on_fail
 
 
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
-      - print_project_owner
-      - save_hello_world_output:
-          requires: 
-            - print_project_owner
-      - print_output_file:
-          requires:
-            - save_hello_world_output
-      - print_command
-      - failure_job
+  webApp:
+    - welcome/run
 
 
 
